ingress-netdata.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    meta.helm.sh/release-name: netdata
    meta.helm.sh/release-namespace: default``
  creationTimestamp: "2023-07-25T06:07:02Z"
  generation: 1
  labels:
    app: netdata
    app.kubernetes.io/managed-by: Helm
    chart: netdata-3.7.65
    heritage: Helm
    release: netdata
  name: netdata
  namespace: default
  resourceVersion: "448019"
  uid: 976ff90c-657d-418b-b14f-79b1d6e1acd3
spec:
  rules:
  - host: netdata.k8s.local
    http:
      paths:
      - backend:
          service:
            name: netdata
            port:
              name: http
        path: /
        pathType: Prefix
status:
  loadBalancer:
    ingress:
    - hostname: localhost
